--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,7 @@ config/api_keys.json
 *.temp
 *.bak
 *.backup
+
+# Reports (not for version control)
+docs/SESSION_REPORT.md
+docs/TIME_MANAGEMENT_REPORT.md
