--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ description = "一个功能丰富的Python学习终端应用"
 readme = "README.md"
 license = {text = "MIT"}
 authors = [
-    {name = "Python学习助手开发团队"},
+    {name = "Ericoding"},
 ]
 classifiers = [
     "Development Status :: 4 - Beta",
