--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ classifiers = [
 requires-python = ">=3.9"
 dependencies = [
     "openai>=1.0.0",
+    "pyfuze",
     "requests>=2.28.0",
 ]
 
@@ -55,3 +56,6 @@ packages = ["src"]
 "config" = "config"
 "docs" = "docs"
 "examples" = "examples"
+
+[tool.uv.sources]
+pyfuze = { git = "https://github.com/TanixLu/pyfuze.git" }
